# Django-6-By-Example

./: .gitignore  README.md
Chapter01/: docker-compose.yml  pyproject.toml
Chapter02/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Chapter02/mysite/blog/: models.py  urls.py  views.py
Chapter02/mysite/fixtures/: chapter_2.json
Chapter02/mysite/mysite/: settings.py
Chapter03/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Chapter03/mysite/blog/: aggregates.py  models.py  views.py
Chapter03/mysite/fixtures/: chapter_3.json
Chapter03/mysite/mysite/: settings.py  urls.py
Chapter04/: docker-compose.yml  pyproject.toml  requirements.txt
Chapter04/bookmarks/account/: forms.py  models.py  urls.py  views.py
Chapter04/bookmarks/bookmarks/: settings.py  urls.py
Chapter05/: .env.example  requirements.txt
Chapter06/: requirements.txt
Chapter07/: docker-compose.yml  pyproject.toml  requirements.txt
Chapter07/bookmarks/account/: forms.py  models.py  urls.py  views.py
Chapter07/bookmarks/account/migrations/: 0002_contact.py
Chapter07/bookmarks/account/templates/: base.html
Chapter07/bookmarks/account/templates/account/: dashboard.html
Chapter07/bookmarks/account/templates/account/user/: detail.html  list.html
Chapter07/bookmarks/actions/migrations/: 0001_initial.py
Chapter07/bookmarks/bookmarks/: settings.py  urls.py
Chapter07/bookmarks/images/: models.py  urls.py  views.py
Chapter07/bookmarks/images/migrations/: 0002_image_total_likes_and_more.py
Chapter08/: requirements.txt
(+34 files in other folders)
