[project]
name = "Django-6-By-Example"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref~=3.11.1",
    "django~=6.0.5",
    "django-debug-toolbar==4.3.0",
    "django-extensions==4.1",
    "easy-thumbnails==2.10.1",
    "pillow~=11.3.0",
    "pyopenssl==26.2.0",
    "python-decouple==3.8",
    "redis==8.0.0",
    "requests==2.34.2",
    "social-auth-app-django==5.9.0",
    "sqlparse==0.5.5",
    "werkzeug==3.1.8",
]
